--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,25 +2,14 @@
 <html lang="en-us">
 
     <head>
-        <title>DemoDRA - Current Weather</title>
+        <title>Demo IBM Cloud Continous Delivery Service</title>
 
         <link rel="stylesheet" href="/built/css/default.css" />
 
-        <script src="/bower_components/angular/angular.js"></script>
-        <script src="/bower_components/angular-route/angular-route.js"></script>
-        <script src="/js/controllers.js"></script>
     </head>
 
-    <body>
-        <div float="left">
-            <% include includes/mainbody %>
-        </div>
+    <body bgcoloer="blue">
+        <h1> Demo IBM Cloud Continous Delivery Service</h1>
     </body>
-
-    <script>
-         angular.element(document).ready(function() {
-            angular.bootstrap(document, ['ConsoleModule']);
-        });
-    </script>
 
 </html>
