--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,8 +8,10 @@
 
     </head>
 
-    <body bgcoloer="blue">
+    <body>
+    <div style="background-color:#EDF7FF;">
         <h1> Demo IBM Cloud Continous Delivery Service</h1>
+    </div>
     </body>
 
 </html>
