--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,7 +7,7 @@
 
     <body>
     <div style="background-color:#EDF7FF;">
-        <h1> Hello! IBM Calsonic Kansei !!</h1>
+        <h1> Hello! tool chain world!!</h1>
     </div>
     </body>
 </html>
